css va js file qo'shildi

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agent ilova</title>
+    <title>Agent-ilova</title>
 </head>
 <body>
-    <h1>salom bu agent ilova</h1>
+    <div class="conainer">
+        <div class="name-space">
+            <input type="text" placeholder="do'kon nomi">
+            <input type="text" placeholder="Agent ismi">
+        </div> 
+        <div class="prodact-space">
+            <select name="prodact" id="product-1">
+                <option value="maxsulot-1">Maxsulot-1</option>
+                <option value="maxsuot-2">Maxsuot-2</option>
+            </select>
+            <input type="number" placeholder="Maxsulot nomini kiriting:">
+            <input type="number" placeholder="maxulot narxi">
+        </div>
+    </div>
 </body>
-</html>
+</html
